# gwm

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: wheels.yml
python/: bindings.cpp
python/gwm/: __init__.py  _cli.py  _core.pyi
python/tests/: conftest.py  test_cli.py  test_errors.py  test_golden.py  test_in_memory.py  test_index_bytes.py  test_roundtrip.py
src/: Build.cpp  Graph.cpp  Makefile  Search.cpp  WLKernel.cpp  WLKernel.hpp  gWM.cpp  gWM.hpp  rank9sel.cpp  rank9sel.h
test/: bench.sh  regress.sh
test/golden/: build-it2.txt  build-it3.txt  search-q08.txt  search-q09it3.txt  search-self06.txt
